delete function added

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   </head>
   <body ng-app="myApp">
-    <div ng-view>
-
-    </div>
+    <div ng-view></div>
     <script src="./build/bundle.js"></script>
   </body>
 </html>
